--- a/themes/fluid/layout/_partial/footer.ejs
+++ b/themes/fluid/layout/_partial/footer.ejs
@@ -1,9 +1,11 @@
 <footer class="mt-5">
   <div class="text-center py-3">
     <div>
+      <a href="https://hexo.io" target="_blank" rel="nofollow noopener"><span>Hexo</span></a>
+      <a> & </a>
       <a href="https://github.com/fluid-dev/hexo-theme-fluid" target="_blank" rel="nofollow noopener">
         <span>Fluid</span></a>
-      <a href="https://hexo.io" target="_blank" rel="nofollow noopener"><span>©Now eded.cc</span></a>
+      <a href="https://eded.cc" target="_blank" rel="nofollow noopener"><span>©Now eded.cc</span></a>
     </div>
     <%- partial('_partial/statistics.ejs') %>
     <%- partial('_partial/beian.ejs') %>
