--- a/themes/fluid/layout/_partial/footer.ejs
+++ b/themes/fluid/layout/_partial/footer.ejs
@@ -6,7 +6,8 @@
       <a href="https://github.com/fluid-dev/hexo-theme-fluid" target="_blank" rel="nofollow noopener">
         <span>Fluid</span></a>
       <br>
-      <a href="https://eded.cc" target="_blank" rel="nofollow noopener"><span>©Now eded.cc</span></a>
+      <a>©Now </a>
+      <a href="https://eded.cc" target="_blank" rel="nofollow noopener"><span>eded.cc</span></a>
     </div>
     <%- partial('_partial/statistics.ejs') %>
     <%- partial('_partial/beian.ejs') %>
