--- a/themes/fluid/layout/_partial/footer.ejs
+++ b/themes/fluid/layout/_partial/footer.ejs
@@ -2,11 +2,11 @@
   <div class="text-center py-3">
     <div>
       <a href="https://hexo.io" target="_blank" rel="nofollow noopener"><span>Hexo</span></a>
-      <a> & </a>
+      <p> & </p>
       <a href="https://github.com/fluid-dev/hexo-theme-fluid" target="_blank" rel="nofollow noopener">
         <span>Fluid</span></a>
       <br>
-      <a>©Now </a>
+      <p>©Now </p>
       <a href="https://eded.cc" target="_blank" rel="nofollow noopener"><span>eded.cc</span></a>
     </div>
     <%- partial('_partial/statistics.ejs') %>
