--- a/themes/fluid/layout/_partial/footer.ejs
+++ b/themes/fluid/layout/_partial/footer.ejs
@@ -7,7 +7,7 @@
         <span>Fluid</span></a>
       <br>
       ©Now
-      <a href="https://eded.cc" target="_blank" rel="nofollow noopener"><span>eded.cc</span></a>
+      <a href="https://eded.cc"><span>eded.cc</span></a>
     </div>
     <%- partial('_partial/statistics.ejs') %>
     <%- partial('_partial/beian.ejs') %>
