--- a/themes/fluid/layout/_partial/footer.ejs
+++ b/themes/fluid/layout/_partial/footer.ejs
@@ -5,9 +5,7 @@
        &
       <a href="https://github.com/fluid-dev/hexo-theme-fluid" target="_blank" rel="nofollow noopener">
         <span>Fluid</span></a>
-      <br>
-      ©Now
-      <a href="https://eded.cc"><span>eded.cc</span></a>
+      <p>©Now <a href="https://eded.cc"><span>eded.cc</span></a></p>
     </div>
     <%- partial('_partial/statistics.ejs') %>
     <%- partial('_partial/beian.ejs') %>
